--- a/bin/build
+++ b/bin/build
@@ -7,45 +7,53 @@ if [ -z "$SRC_FILE_PARAM" ]; then
   exit 1
 fi
 
-SRC_FILE_RES_PATH=`find $SRC_PATH -type f -regex ".+$SRC_FILE_PARAM"`
+SRC_FILES=()
 
-if [ ! -f "$SRC_FILE_RES_PATH" ]; then
-  echo "Not found $SRC_FILE_PARAM"
-  exit 1
-fi
+[ -z "`echo $SRC_FILE_PARAM | grep /`" ] && SRC_FILES=( `find $SRC_PATH -type f -name $SRC_FILE_PARAM` )
 
-SRC_FILE_REL_PATH=`realpath $SRC_FILE_RES_PATH | awk -v pattern="$SRC_PATH/" '{ gsub(pattern, "");}1'`
+[ ${#SRC_FILES[@]} -eq 0 ] && SRC_FILES=( `find $SRC_PATH -type f -regex $SRC_FILE_PARAM` )
 
-SRC_FILE_PATH=`dirname $SRC_FILE_RES_PATH`
-SRC_FILE_NAME=`basename $SRC_FILE_RES_PATH`
+[ ${#SRC_FILES[@]} -eq 0 ] && SRC_FILES[0]=$SRC_FILE_PARAM
 
-cd $WORKSPACE_ROOT
+for SRC_FILE_RES_PATH in "${SRC_FILES[@]}"; do
+  [ ! -f "$SRC_FILE_RES_PATH" ] && echo "Not found $SRC_FILE_PARAM"
 
-FILE_BUILD_PATH=`echo $BUILD_PATH/$SRC_FILE_REL_PATH | sed 's/\.[^.]\+$//g'`
+  SRC_FILE_REL_PATH=`realpath $SRC_FILE_RES_PATH | awk -v pattern="$SRC_PATH/" '{ gsub(pattern, "");}1'`
 
-FILE_NAME=`echo $SRC_FILE_NAME | sed 's/\.c//g'`
+  SRC_FILE_PATH=`dirname $SRC_FILE_RES_PATH`
+  SRC_FILE_NAME=`basename $SRC_FILE_RES_PATH`
 
-source $SRC_FILE_PATH/$FILE_NAME.params
+  cd $WORKSPACE_ROOT
 
-[ ! -d $FILE_BUILD_PATH ] && mkdir -p $FILE_BUILD_PATH
+  FILE_BUILD_PATH=`echo $BUILD_PATH/$SRC_FILE_REL_PATH | sed 's/\.[^.]\+$//g'`
 
-SRC_HEX_FILE="$FILE_NAME.ihx"
-SRC_REL_FILE="$FILE_NAME.rel"
+  FILE_NAME=`echo $SRC_FILE_NAME | sed 's/\.c//g'`
 
-sdcc $SDCC_ARGS $SRC_FILE_RES_PATH -o $FILE_BUILD_PATH/
+  source $SRC_FILE_PATH/$FILE_NAME.params
 
-if [ $? -eq 0 ]; then
-  FILE_TARGET_PATH=`echo $TARGET_PATH/$SRC_FILE_REL_PATH | sed 's/\.c//g'`
-  [ ! -d $FILE_TARGET_PATH ] && mkdir -p $FILE_TARGET_PATH
+  [ ! -d $FILE_BUILD_PATH ] && mkdir -p $FILE_BUILD_PATH
 
-  if [ ! -z "$TARGET_BIN_FILE" ] && [ -f "$FILE_BUILD_PATH/$SRC_HEX_FILE" ]; then
-    objcopy -I ihex -O binary $FILE_BUILD_PATH/$SRC_HEX_FILE $FILE_TARGET_PATH/$TARGET_BIN_FILE
+  SRC_HEX_FILE="$FILE_NAME.ihx"
+  SRC_REL_FILE="$FILE_NAME.rel"
 
-    echo ".$FILE_TARGET_PATH/$TARGET_BIN_FILE"
+  sdcc $SDCC_ARGS $SRC_FILE_RES_PATH -o $FILE_BUILD_PATH/
+
+  if [ $? -eq 0 ]; then
+    FILE_TARGET_PATH=`echo $TARGET_PATH/$SRC_FILE_REL_PATH | sed 's/\.c//g'`
+    [ ! -d $FILE_TARGET_PATH ] && mkdir -p $FILE_TARGET_PATH
+
+    if [ ! -z "$TARGET_BIN_FILE" ] && [ -f "$FILE_BUILD_PATH/$SRC_HEX_FILE" ]; then
+      objcopy -I ihex -O binary $FILE_BUILD_PATH/$SRC_HEX_FILE $FILE_TARGET_PATH/$TARGET_BIN_FILE
+
+      echo ".$FILE_TARGET_PATH/$TARGET_BIN_FILE"
+    fi
+
+    if [ ! -z "$TARGET_LIB_FILE" ] && [ -f "$FILE_BUILD_PATH/$SRC_REL_FILE" ]; then
+      sdar -rc $FILE_TARGET_PATH/$TARGET_LIB_FILE $FILE_BUILD_PATH/$SRC_REL_FILE
+      echo ".$FILE_TARGET_PATH/$TARGET_LIB_FILE"
+    fi
   fi
-
-  if [ ! -z "$TARGET_LIB_FILE" ] && [ -f "$FILE_BUILD_PATH/$SRC_REL_FILE" ]; then
-    sdar -rc $FILE_TARGET_PATH/$TARGET_LIB_FILE $FILE_BUILD_PATH/$SRC_REL_FILE
-    echo ".$FILE_TARGET_PATH/$TARGET_LIB_FILE"
-  fi
-fi
+  SDCC_ARGS=""
+  TARGET_BIN_FILE=""
+  TARGET_LIB_FILE=""
+done
